@@ -56,6 +56,14 @@
  Mousetrap.bind('esc', function() { document.bus.$emit('esc') });
 
  function styleSelects() {
+  // YouTube plugin has label attribe for options, but custom-selects does not seem to pick
+  // this up. Work-around by coping label...
+  let elems = document.getElementsByTagName("option");
+  for (let e=0, elen=elems.length; e<elen; ++e) {
+   if (undefined!=elems[e].label) {
+    elems[e].innerText = elems[e].label;
+   }
+  }
   let selects = customSelect("select");
   // If select is close to bottom then need to scroll into view...
   for (let i=0, len=selects.length; i<len; ++i) {
